--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
+    "class-validator": "^0.14.0",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
