--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
     "flowbite": "^1.8.1",
+    "jquery": "^3.7.1",
     "next": "13.5.6",
     "react": "^18",
+    "react-chosen": "^0.3.8",
     "react-dom": "^18",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
