--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "api:start:dev": "cd library-api && nest start --watch",
     "api:lint": "eslint \"library-api/**/*.ts\" --fix",
     "api:test": "jest",
+    "api:test:cov": "jest --coverage",
     "site:dev": "cd library-site && next dev",
     "site:build": "cd library-site && next build",
     "site:start": "cd library-site && next start",
@@ -18,6 +19,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.1.14",
     "@nestjs/typeorm": "^10.0.0",
     "class-validator": "^0.14.0",
     "next": "13.5.6",
@@ -29,6 +31,7 @@
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.2.0",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
@@ -48,7 +51,7 @@
     "eslint-config-next": "13.5.6",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^29.5.0",
+    "jest": "^29.7.0",
     "postcss": "^8",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
@@ -66,7 +69,14 @@
       "json",
       "ts"
     ],
-    "rootDir": "library-api/src",
+    "rootDir": "library-api/src/",
+    "moduleNameMapper": {
+      "^library-api/src/(.*)$": "<rootDir>/$1"
+    },
+    "moduleDirectories": [
+      "node_modules",
+      "<rootDir>"
+    ],
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
