--- a/package.json
+++ b/package.json
@@ -15,12 +15,18 @@
     "site:lint": "cd library-site && next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.16",
+    "@mui/material": "^5.14.17",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.5",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
     "flowbite": "^1.8.1",
     "jquery": "^3.7.1",
+    "mui": "^0.0.1",
     "next": "13.5.6",
     "react": "^18",
     "react-chosen": "^0.3.8",
@@ -28,6 +34,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "sqlite3": "^5.1.6",
+    "styled-components": "^6.1.0",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
