--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
     "flowbite": "^1.8.1",
+    "fs": "^0.0.1-security",
     "jquery": "^3.7.1",
     "mui": "^0.0.1",
     "next": "13.5.6",
@@ -50,7 +51,7 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "autoprefixer": "^10",
-    "axios": "^1.5.1",
+    "axios": "^1.6.1",
     "dotenv": "^16.3.1",
     "eslint": "^8.42.0",
     "eslint-config-airbnb": "^19.0.4",
