--- a/package.json
+++ b/package.json
@@ -18,20 +18,22 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@faker-js/faker": "^8.2.0",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
     "@mui/styled-engine-sc": "^6.0.0-alpha.5",
-    "@faker-js/faker": "^8.2.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.14",
     "@nestjs/typeorm": "^10.0.0",
+    "@uploadcare/blocks": "0.29.1",
+    "@uploadcare/upload-client": "6.8.0",
+    "class-validator": "^0.14.0",
     "flowbite": "^1.8.1",
     "fs": "^0.0.1-security",
     "jquery": "^3.7.1",
     "mui": "^0.0.1",
-    "class-validator": "^0.14.0",
     "next": "13.5.6",
     "react": "^18",
     "react-chosen": "^0.3.8",
